[gd_scene load_steps=4 format=3 uid="uid://cr3vjt4hene5h"]

[ext_resource type="Script" path="res://testing.gd" id="1_1qoyx"]
[ext_resource type="Theme" uid="uid://x61ckk74bynv" path="res://screens/theme/base_theme.tres" id="1_xvrok"]
[ext_resource type="Resource" uid="uid://ciolqpkmmigyc" path="res://scenes/actors/party_data/hero_1.tres" id="3_ligtm"]

[node name="Testing" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xvrok")
script = ExtResource("1_1qoyx")
data = ExtResource("3_ligtm")

[node name="Display" type="Label" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 390.0
offset_right = 541.0
offset_bottom = 435.0
text = "Curve pos: XY[0 :: 0]"

[node name="TotalExp" type="Label" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 498.0
offset_right = 545.0
offset_bottom = 543.0
text = "Total XP::[0]"

[node name="Level" type="HSlider" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 85.0
offset_right = 901.0
offset_bottom = 112.0
min_value = 1.0
value = 1.0

[node name="SamplePos" type="HSlider" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 217.0
offset_right = 903.0
offset_bottom = 245.0
max_value = 1.0
step = 0.01
value = 0.01

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 40.0
offset_right = 124.0
offset_bottom = 85.0
text = "Level"

[node name="CurveLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 157.0
offset_right = 134.0
offset_bottom = 202.0
text = "Curve"
